; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxr/extr_qlnxr_verbs.c_qlnxr_get_num_pages.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/qlnx/qlnxr/extr_qlnxr_verbs.c_qlnxr_get_num_pages.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ib_phys_buf = type { i64 }

@PAGE_SIZE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, %struct.ib_phys_buf*, i32)* @qlnxr_get_num_pages to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @qlnxr_get_num_pages(i32* %0, %struct.ib_phys_buf* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.ib_phys_buf*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store %struct.ib_phys_buf* %1, %struct.ib_phys_buf** %5, align 8
  store i32 %2, i32* %6, align 4
  store i64 0, i64* %8, align 8
  store i32 0, i32* %7, align 4
  br label %10

10:                                               ; preds = %30, %3
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %11, %12
  br i1 %13, label %14, label %33

14:                                               ; preds = %10
  store i64 0, i64* %9, align 8
  br label %15

15:                                               ; preds = %21, %14
  %16 = load i64, i64* %9, align 8
  %17 = load %struct.ib_phys_buf*, %struct.ib_phys_buf** %5, align 8
  %18 = getelementptr inbounds %struct.ib_phys_buf, %struct.ib_phys_buf* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp slt i64 %16, %19
  br i1 %20, label %21, label %27

21:                                               ; preds = %15
  %22 = load i64, i64* @PAGE_SIZE, align 8
  %23 = load i64, i64* %9, align 8
  %24 = add nsw i64 %23, %22
  store i64 %24, i64* %9, align 8
  %25 = load i64, i64* %8, align 8
  %26 = add i64 %25, 1
  store i64 %26, i64* %8, align 8
  br label %15

27:                                               ; preds = %15
  %28 = load %struct.ib_phys_buf*, %struct.ib_phys_buf** %5, align 8
  %29 = getelementptr inbounds %struct.ib_phys_buf, %struct.ib_phys_buf* %28, i32 1
  store %struct.ib_phys_buf* %29, %struct.ib_phys_buf** %5, align 8
  br label %30

30:                                               ; preds = %27
  %31 = load i32, i32* %7, align 4
  %32 = add nsw i32 %31, 1
  store i32 %32, i32* %7, align 4
  br label %10

33:                                               ; preds = %10
  %34 = load i64, i64* %8, align 8
  ret i64 %34
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
